sample/retrieveUnpackaged/objects/Livelink__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Billing_Account__c</referenceTo>
        <relationshipName>Livelink_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link CASE to LiveLink Documents</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Livelink Documents</relationshipLabel>
        <relationshipName>Livelink_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Livelink_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Initiated__c</fullName>
        <description>The date/time the document was added to Livelink (not the same as the date this record was created)</description>
        <inlineHelpText>The date/time the document was added to Livelink (not the same as the date this record was created)</inlineHelpText>
        <label>Date Initiated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Folder_Id__c</fullName>
        <description>The parent folder unique Id for the Livelink document</description>
        <externalId>true</externalId>
        <inlineHelpText>The parent folder unique Id for the Livelink document</inlineHelpText>
        <label>Folder Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Node_Id__c</fullName>
        <externalId>true</externalId>
        <label>Node Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Open_Document__c</fullName>
        <formula>HYPERLINK(&quot;&quot;&amp;$Setup.LivelinkSettings__c.ServerBase__c&amp; $Setup.LivelinkSettings__c.OpenObjectURL__c&amp;Node_Id__c&amp; $Setup.LivelinkSettings__c.OpenDocumentURLSuffix__c,&quot;Open Document&quot;, &quot;openLLdoc&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Parent_Folder__c</fullName>
        <formula>HYPERLINK(&quot;&quot;&amp;$Setup.LivelinkSettings__c.ServerBase__c&amp;$Setup.LivelinkSettings__c.OpenObjectURL__c&amp;  Folder_Id__c&amp; $Setup.LivelinkSettings__c.OpenFolderURLSuffix__c,&quot;Open Parent Folder&quot;, &quot;openLLfolder&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Parent Folder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>Livelink_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Livelink Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Billing_Account__c</columns>
        <columns>Customer__c</columns>
        <columns>Property__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Date_Initiated__c</columns>
        <columns>Folder_Id__c</columns>
        <columns>Open_Document__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Open_Document__c</columns>
        <columns>Open_Parent_Folder__c</columns>
        <columns>Billing_Account__c</columns>
        <columns>Property__c</columns>
        <columns>Customer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Node_Id__c</columns>
        <columns>Folder_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>5/24/2012 12:00 AM</value>
        </filters>
        <filters>
            <field>Billing_Account__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Customer__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Property__c</field>
            <operation>equals</operation>
        </filters>
        <label>Orphaned - Created Today</label>
        <sharedTo>
            <group>Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Orphaned_LiveLink_Docs</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>Billing_Account__c</columns>
        <columns>Customer__c</columns>
        <columns>Property__c</columns>
        <columns>Folder_Id__c</columns>
        <columns>Node_Id__c</columns>
        <columns>Open_Document__c</columns>
        <columns>Open_Parent_Folder__c</columns>
        <columns>Case__c</columns>
        <columns>Date_Initiated__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Billing_Account__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Property__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Orphaned LiveLink Docs</label>
        <sharedTo>
            <group>Admin</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Filename</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Livelink Documents</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>